# CMakeList.txt : CMake project for Machine, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Machine")

# Add source to this project's executable.
add_executable (Machine "Machine.cpp" "Machine.h")

# TODO: Add tests and install targets if needed.
